<resources>
    <string name="app_name">Phone Bill</string>
    <string name="AddPhoneCall">Add a new phone call</string>
    <string name="title_activity_add_phone_call">AddPhoneCall</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="customer">Customer</string>
    <string name="callernumber">CallerNumber</string>
    <string name="calleenumber">CalleeNumber</string>
    <string name="begin_time">Begin Time</string>
    <string name="end_time">End Time</string>
    <string name="submit">Submit</string>
    <string name="title_activity_search_customer_bill">SearchCustomerBill</string>
    <string name="pretty_print_bill">Pretty print bill</string>
    <string name="calculator">Calculator</string>
    <string name="input">Input</string>
    <string name="return_home">Return Home</string>
    <string name="NoCustomerFound">No cutomer found</string>
    <string name="title_activity_display_text">DisplayText</string>
    <string name="search_calls_in_range">Search Calls In Range</string>
    <string name="help_menu">Help Menu</string>
    <string name="create_blank_bill">Create Blank Bill</string>
</resources>