<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CustomerRequest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="178dp"
        android:onClick="addPhoneCall"
        android:text="@string/AddPhoneCall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SearchCustomerPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="13dp"
        android:onClick="searchAndDisplayBill"
        android:text="@string/pretty_print_bill"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EditTextCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="99dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/SearchInRangeCalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="116dp"
        android:onClick="printInRangeOf"
        android:text="@string/search_calls_in_range"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/HelpMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="69dp"
        android:onClick="helpDisplay"
        android:text="@string/help_menu"
        app:layout_constraintBottom_toTopOf="@+id/SearchCustomerPrint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextCustomer" />

    <Button
        android:id="@+id/CreateBlankPhoneBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="27dp"
        android:text="@string/create_blank_bill"
        android:onClick="createNewPhoneBillNoCalls"
        app:layout_constraintBottom_toTopOf="@+id/HelpMenuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextCustomer" />

</androidx.constraintlayout.widget.ConstraintLayout>